[package]
name    = "data_cleaner"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "data_cleaner"
path = "src/main.rs"

[dependencies]
polars = { version = "0.37.0", default-features = false, features = ["lazy", "csv", "strings", "fmt", "temporal", "regex"] }
anyhow     = "1.0"
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono     = "0.4"
rayon      = "1.8"
indicatif  = "0.18"
colored    = "3.0"
regex      = "1.10"
reqwest    = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
jsonwebtoken = { version = "9", default-features = false, features = ["use_pem"] }
tokio      = { version = "1", features = ["full", "rt-multi-thread"] }

[profile.dev]
debug = 0
codegen-units = 16
incremental = true

[profile.release]
opt-level = 3
lto       = true
codegen-units = 1
