[package]
name    = "data_cleaner"
version = "0.3.0-iso"
edition = "2021"

[[bin]]
name = "data_cleaner"
path = "src/main.rs"

[dependencies]
polars = { version = "0.37.0", default-features = false, features = ["lazy", "csv", "strings", "fmt", "temporal", "regex"] }
anyhow     = "1.0"
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml       = "0.8"
chrono     = { version = "0.4", features = ["serde"] }
rayon      = "1.8"
indicatif  = "0.18"
colored    = "3.0"
regex      = "1.10"
sha2       = "0.10"
thiserror  = "1.0"
reqwest    = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
jsonwebtoken = { version = "9", default-features = false, features = ["use_pem"] }
tokio      = { version = "1", features = ["full", "rt-multi-thread"] }

[profile.dev]
debug = 0
codegen-units = 16
incremental = true

[profile.release]
opt-level = 3
lto       = "thin"
codegen-units = 8
